# forgekv

./: .gitignore  .gitmodules  BENCHMARK_RESULTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  docker-compose.yml  logo-capture.html  logo-preview.html
benchmark/redis-comparison/: run.sh
benchmark/redis-comparison/results/: bench_20260322_200908.md
redis-compat-rs/: Cargo.toml
redis-compat-rs/src/: error.rs  lib.rs  store.rs  value.rs
rust/: Cargo.toml  Dockerfile  forgekv.conf
rust/src/: acl.rs  blocking.rs  config.rs  ext_type_registry.rs  keyspace.rs  lua_engine.rs  main.rs  pubsub.rs  resp.rs  server.rs
rust/src/commands/: bf_cmds.rs  cf_cmds.rs  geo_cmds.rs  hash_cmds.rs  hll_cmds.rs  json_cmds.rs  key_cmds.rs  list_cmds.rs  mod.rs  probabilistic_cmds.rs  search_cmds.rs  server_cmds.rs  set_cmds.rs  stream_cmds.rs  string_cmds.rs  tdigest_cmds.rs  zset_cmds.rs
rust/src/database/: metadata.rs  mod.rs
rust/src/storage/: bloom.rs  compaction.rs  key_encoding.rs  lsm.rs  manifest.rs  memtable.rs  mod.rs  sstable.rs  wal.rs
tests/: comprehensive_test.py  test_features.py  test_pubsub.py
