[package]
name = "forgekv"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "forgekv"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "io-util", "time", "sync", "signal"] }
parking_lot = "0.12"
crc32fast = "1"
memmap2 = "0.9"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
lazy_static = "1"
mlua = { version = "0.10", features = ["lua54", "vendored"], optional = true }
serde_json = "1"

[features]
default = []
lua = ["dep:mlua"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
